--- a/src/index.html
+++ b/src/index.html
@@ -4,20 +4,23 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>Task 11</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load ="partials/header.html" />
+    <form class="form">
+      <input
+        class="input"
+        type="text"
+        name="text"
+        placeholder="Search images..."
+      />
+      <button type="submit">Search</button>
+    </form>
 
-    <section>
-      <h1>Example page title</h1>
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
-    </section>
+    <div class="loader"></div>
 
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
+    <ul class="images-list"></ul>
 
     <script type="module" src="./main.js"></script>
   </body>
