--- a/src/index.html
+++ b/src/index.html
@@ -1,27 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Task 11</title>
-    <link rel="stylesheet" href="./css/styles.css" />
-  </head>
-  <body>
-    <form class="form">
-      <input
-        class="input"
-        type="text"
-        name="text"
-        placeholder="Search images..."
-      />
-      <button type="submit">Search</button>
-    </form>
 
-    <div class="loader"></div>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>goit-js-hw-11</title>
+  <link rel="stylesheet" href="./css/styles.css" />
+</head>
 
-    <ul class="images-list"></ul>
+<body>
+  <form class="js-search search">
+    <input class="input-search" name="search" type="text" placeholder="Enter search term" />
+    <button type="submit">Search</button>
+  </form>
+  <div class="container">
+    <div class="loader is-hidden"></div>
+    <ul class="gallery"></ul>
+  </div>
 
-    <script type="module" src="./main.js"></script>
-  </body>
+  <script type="module" src="./main.js"></script>
+</body>
+
 </html>
